--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>chill-flow-frontend-vibes</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Start Hub</title>
+    <meta name="description" content="Find the best startups and investors" />
+    <meta name="author" content="Start Hub" />
 
-    <meta property="og:title" content="chill-flow-frontend-vibes" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Start Hub" />
+    <meta property="og:description" content="Find the best startups and investors" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/Startup HUB new.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="/Startup HUB new.png" />
   </head>
 
   <body>
