--- a/index.html
+++ b/index.html
@@ -3,18 +3,36 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Start Hub</title>
+    <title>Startup Hub</title>
     <meta name="description" content="Find the best startups and investors" />
-    <meta name="author" content="Start Hub" />
+    <meta name="author" content="Startup Hub" />
 
-    <meta property="og:title" content="Start Hub" />
-    <meta property="og:description" content="Find the best startups and investors" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="/favicon-96x96.png"
+      sizes="96x96"
+    />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/apple-touch-icon.png"
+    />
+    <meta name="apple-mobile-web-app-title" content="Startup Hub" />
+    <link rel="manifest" href="/site.webmanifest" />
+
+    <meta property="og:title" content="Startup Hub" />
+    <meta
+      property="og:description"
+      content="Find the best startups and investors"
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/Startup HUB new.png" />
+    <meta property="og:image" content="/Startup-HUB-new.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="/Startup HUB new.png" />
+    <meta name="twitter:image" content="/Startup-HUB-new.png" />
   </head>
 
   <body>
