--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Startup Hub</title>
+    <title>Start Hub</title>
     <meta name="description" content="Find the best startups and investors" />
-    <meta name="author" content="Startup Hub" />
+    <meta name="author" content="Start Hub" />
 
     <link
       rel="icon"
@@ -20,10 +20,10 @@
       sizes="180x180"
       href="/apple-touch-icon.png"
     />
-    <meta name="apple-mobile-web-app-title" content="Startup Hub" />
+    <meta name="apple-mobile-web-app-title" content="Start Hub" />
     <link rel="manifest" href="/site.webmanifest" />
 
-    <meta property="og:title" content="Startup Hub" />
+    <meta property="og:title" content="Start Hub" />
     <meta
       property="og:description"
       content="Find the best startups and investors"
